--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   device_info_plus: ^11.2.2
   flutter_secure_storage: ^9.2.4
   package_info_plus: ^8.1.4
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
