--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   package_info_plus: ^8.1.4
   http: ^1.3.0
+  qr_code_scanner: ^1.0.1
+  audioplayers: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +67,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/sounds/success_sound.mp3
+    - assets/sounds/failure_sound.mp3
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
