added app logo and changed name

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/> 
     
     <application
-        android:label="vidres_app"
+        android:label="Vidres Inventory"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
