--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.3.0
   qr_code_scanner: ^1.0.1
   audioplayers: ^6.1.1
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/vidres_logo.png
     - assets/sounds/success_sound.mp3
     - assets/sounds/failure_sound.mp3
   #   - images/a_dot_ham.jpeg
@@ -108,3 +110,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/vidres_logo.png" 
