--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,12 @@ dependencies:
   dropdown_search: ^6.0.1
   device_info_plus: ^11.2.2
   flutter_secure_storage: ^9.2.4
-  package_info_plus: ^8.1.4
+  package_info_plus: ^8.3.0
   http: ^1.3.0
   qr_code_scanner: ^1.0.1
   audioplayers: ^6.1.1
   flutter_launcher_icons: ^0.14.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
